fix layout issues with master, njcie and njsr themes

--- a/master/styles/head.less
+++ b/master/styles/head.less
@@ -114,10 +114,6 @@
   }
 }
 
-.pkp_site_name_wrapper {
-	overflow: hidden;
-}
-
 .pkp_structure_head .pkp_head_wrapper .pkp_site_name_wrapper .pkp_site_name {
    position: relative;
    font-family: Corbel, Arial, sans-serif;
