--- a/njsr/styles/footer.less
+++ b/njsr/styles/footer.less
@@ -7,12 +7,12 @@
     line-height: 1.3;
     padding-top: 4px;
     background-image:url(/plugins/themes/njsr/svg/logo-INN.svg), url(/plugins/themes/njsr/svg/logo-INN-white.svg);
-    background-size: contain contain;
+    background-size: 8rem auto;
     background-position: left center, left -9999px center;
     background-repeat: no-repeat, no-repeat;
     text-decoration: none;
     color: black;
-    padding-left: 11em;
+    padding-left: 9rem;
     height: 4rem;
     display: flex;
     flex-flow: row nowrap;
