--- a/njsr/styles/variables.less
+++ b/njsr/styles/variables.less
@@ -1,6 +1,6 @@
 /*njsr overrides master*/
 
-@footer-wrapper-bg: white;
+@footer-wrapper-bg: whitesmoke;
 @footer-wrapper-color: black;
 
 @footer-link-color:black;
@@ -11,3 +11,4 @@
 @footer-hosted-by-logo:url(/plugins/themes/master/svg/OsloMet-logo-black-left.svg),url(/plugins/themes/master/svg/OsloMet-logo-white-left.svg);
 @footer-hosted-by-logo-hover:@footer-hosted-by-logo;
 
+@header-bg-overlay: linear-gradient(to bottom, #f5f6f6 0%, #dbdce2 21%, #b8bac6 74%, #dddfe3 88%, #dddfe3 88%, #f5f6f6 100%);
